--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="input_height" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="submit">
+        <button type='button' onclick="makeGrid()">submit</button>
     </form>
 
     <h2>Pick A Color</h2>
